# tb-ops

./: .coveragerc  .dockerignore  .gitguardian.yaml  .gitignore  Dockerfile  cloudbuild.yaml  dev-requirements.in  dev-requirements.txt  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: api-ci.yaml
api/: __init__.py
api/adapters/: __init__.py  repository.py
api/cmd/: __init__.py
api/cmd/api/: main.py
api/cmd/migrations/: __init__.py  cde.py  main.py  old_code.py  referral_tree.py  runner.py  seed.py  seed_clients.py  seed_clients_mock.py  seed_clients_separate.py  seed_current.py  seed_from_prod.py  seed_locations_types.py  seed_marketing_sources.py  seed_new_and_old.py  seed_past.py  seed_past_old.py  seed_users.py
api/config/: __init__.py  postgres.py
api/services/: __init__.py
api/services/admin/: __init__.py  models.py  service.py
api/services/audit/: __init__.py  models.py  service.py
api/services/auth/: __init__.py  models.py  service.py
api/services/clients/: __init__.py  models.py  service.py
api/services/currency/: __init__.py  models.py  service.py
api/services/quality/: __init__.py  models.py  service.py
api/services/reservations/: __init__.py  models.py  service.py
api/services/reviews/: __init__.py  models.py  service.py
api/services/summaries/: __init__.py  dupe_check.py  models.py  service.py
app/: .dockerignore  Dockerfile  README.md  cloudbuild.yaml  package-lock.json  package.json
app/public/: index.html
app/src/: index.css  index.js
tests/: conftest.py  factories.py
(+121 files in other folders)
