# Copyright 2024 SH

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
name = tb-ops
summary = Travel agency data assets and operations.
author = Sydney Horan
author_email = sydneybeal95@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3 :: Only

keywords = data, travel, operations
python_requires = >=3.10
version = attr: api.__version__
url = https://github.com/sydneybeal/tb-ops
package_dir = api

[options]
zip_safe = False
python_requires = ~=3.10
packages = api

install_requires = file: requirements.txt

[options.packages.find]
include =
    api*

exclude =
    app*

[bdist_wheel]
python-tag = py3
